force-app/main/default/objects/Volunteer_Job__c/Volunteer_Job__c.object-meta.xml
<CustomObject>
    <label>Volunteer Job</label>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>