force-app/main/default/objects/Volunteer_Job__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>