force-app/main/default/objects/Volunteer_Job__c/fields/First_Shift__c.field-meta.xml
<CustomField>
    <fullName>First_Shift__c</fullName>
    <label>First Shift</label>
    <summarizedField>Volunteer_Shift__c.Start_Date_Time__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>