force-app/main/default/objects/Volunteer_Job__c/fields/Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Information__c</fullName>
    <inlineHelpText>Additional details such as driving directions. Information in this field is included in automated email reminders.</inlineHelpText>
    <label>Location Information</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>