force-app/main/default/objects/Volunteer_Job__c/fields/Number_of_Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Hours__c</fullName>
    <inlineHelpText>Total number of Volunteer Hours with a Status of Completed. Hours with other status values aren&apos;t included.</inlineHelpText>
    <label>Number of Completed Hours</label>
    <summarizedField>Volunteer_Hours__c.Total_Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>Volunteer_Hours__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Hours__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>