force-app/main/default/objects/Volunteer_Job__c/fields/Number_of_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shifts__c</fullName>
    <label>Number of Shifts</label>
    <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>