force-app/main/default/objects/Volunteer_Job__c/fields/Number_of_Volunteers_Still_Needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers_Still_Needed__c</fullName>
    <label># of Volunteers Still Needed</label>
    <summarizedField>Volunteer_Shift__c.Number_of_Volunteers_Still_Needed__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>