force-app/main/default/objects/Volunteer_Job__c/fields/Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Ongoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing</label>
    <type>Checkbox</type>
</CustomField>