force-app/main/default/objects/Volunteer_Job__c/fields/Skills_Needed__c.field-meta.xml
<CustomField>
    <fullName>Skills_Needed__c</fullName>
    <inlineHelpText>The skills the volunteer should have to do this Job.</inlineHelpText>
    <label>Skills Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Skills</valueSetName>
    </valueSet>
</CustomField>