force-app/main/default/objects/Volunteer_Job__c/fields/Volunteer_Website_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Website_Time_Zone__c</fullName>
    <inlineHelpText>The Time Zone used when displaying Shift times on Sites pages. You only need to set this if you want to override both the Time Zone set on the Site Guest User profile, and the Time Zone set on the Volunteers campaign.</inlineHelpText>
    <label>Volunteer Website Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Website_Time_Zone</valueSetName>
    </valueSet>
</CustomField>