force-app/main/default/objects/Volunteer_Job__c/validationRules/ValidateExternalSignupUrl.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateExternalSignupUrl</fullName>
    <active>true</active>
    <description>Validates that the External Signup URL field begins with an expected URI Scheme.</description>
    <errorConditionFormula>NOT(OR(ISBLANK(External_Signup_Url__c), REGEX(External_Signup_Url__c,&quot;^(http|https|mailto).*&quot;)))</errorConditionFormula>
    <errorDisplayField>External_Signup_Url__c</errorDisplayField>
    <errorMessage>The External Signup Url value must begin with http, https, or mailto.</errorMessage>
</ValidationRule>